--- a/project/package.json
+++ b/project/package.json
@@ -13,9 +13,13 @@
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "https": "^1.0.0",
+    "local": "^0.3.3",
     "mongodb": "^3.5.7",
-    "mongoose": "^5.9.15"
+    "mongoose": "^5.9.15",
+    "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
