--- a/project/package.json
+++ b/project/package.json
@@ -4,14 +4,15 @@
   "description": "Project for tsw.",
   "main": "index.js",
   "scripts": {
-    "start": "node server/index.js",
-    "dev": "nodemon server/index.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "author": "Dominika Cesarz",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
+    "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
