Mostly organization commit. Reinitialized vue project. Added using scss. Used eslint rc generated for whole project. Made one gitignore for whole project.

--- a/project/client/package.json
+++ b/project/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "1.0.0",
-  "description": "tsw vue.js project",
+  "description": "tsw project - auction site",
   "author": "Dominika Cesarz",
   "private": true,
   "scripts": {
