--- a/project/.env
+++ b/project/.env
@@ -1,3 +1,3 @@
 NODE_ENV=development
-PORT=3000
-DATABASE=mongodb://localhost:27017/tswauctiondb
+PORT=5000
+DATABASE=mongodb://localhost/tswauctiondb
