--- a/project2/package.json
+++ b/project2/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "babel-eslint": "^10.1.0",
     "bcrypt": "^4.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -34,6 +35,10 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^3.0.2",
+    "@typescript-eslint/parser": "^3.0.2",
+    "eslint": "^7.1.0",
+    "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
     "sass-loader": "^8.0.2"
