--- a/project/package.json
+++ b/project/package.json
@@ -31,7 +31,9 @@
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "passport.socketio": "^3.7.0",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "node-sass": "^4.14.1",
