--- a/projekt3/.eslintrc.json
+++ b/projekt3/.eslintrc.json
@@ -1,18 +1,13 @@
-module.exports = {
+{
     "env": {
         "browser": true,
         "commonjs": true,
-        "es6": true,
-        "node": true
+        "es2020": true
     },
     "extends": [
         "eslint:recommended",
         "plugin:vue/essential"
     ],
-    "globals": {
-        "Atomics": "readonly",
-        "SharedArrayBuffer": "readonly"
-    },
     "parserOptions": {
         "ecmaVersion": 11
     },
@@ -21,4 +16,4 @@ module.exports = {
     ],
     "rules": {
     }
-};
+}
