--- a/projekt3/package.json
+++ b/projekt3/package.json
@@ -9,7 +9,7 @@
     "client": "npm run serve --prefix client",
     "client-install": "npm install --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "serve": "vue-cli-service serve --https",
+    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
