--- a/projekt3/package.json
+++ b/projekt3/package.json
@@ -45,7 +45,8 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.3.2",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "moment": "^2.26.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.0.2",
