--- a/projekt3/client/package.json
+++ b/projekt3/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "moment": "^2.26.0",
+    "mongoose-aggregate-paginate-v2": "^1.0.4",
     "vue": "^2.6.11"
   },
   "devDependencies": {
