--- a/projekt3/package.json
+++ b/projekt3/package.json
@@ -25,6 +25,7 @@
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
+    "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "error-handler": "^1.0.0",
@@ -33,8 +34,10 @@
     "express-session": "^1.17.1",
     "https": "^1.0.0",
     "local": "^0.3.3",
+    "moment": "^2.26.0",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.15",
+    "mongoose-aggregate-paginate-v2": "^1.0.4",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
@@ -42,11 +45,9 @@
     "passport-local": "^1.0.0",
     "passport.socketio": "^3.7.0",
     "socket.io": "^2.3.0",
-    "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.3.2",
-    "vuex": "^3.4.0",
-    "moment": "^2.26.0"
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.0.2",
