--- a/projekt3/client/package.json
+++ b/projekt3/client/package.json
@@ -11,7 +11,8 @@
     "core-js": "^3.6.5",
     "moment": "^2.26.0",
     "mongoose-aggregate-paginate-v2": "^1.0.4",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vuelidate": "^0.7.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
